# SVT-AV1

./: CMakeLists.txt  README.md  appveyor.yml  reformat_code.py
.ci/: ci.sh
Config/: PredStruct_level0.cfg  PredStruct_level1.cfg  PredStruct_level2.cfg  PredStruct_level3.cfg  PredStruct_level4.cfg  PredStruct_level4_dpb6.cfg  PredStruct_level5.cfg  PredStruct_level5_full.cfg  Sample.cfg
Source/App/DecApp/: CMakeLists.txt  EbDecAppMain.c  EbDecParamParser.c  EbDecParamParser.h  EbDecTime.c  EbDecTime.h  EbFileUtils.c  EbFileUtils.h  EbMD5Utility.c  EbMD5Utility.h
Source/Lib/Common/ASM_AVX2/: CMakeLists.txt  EbBlend_a64_mask_avx2.c  EbHighbdIntraPrediction_AVX2.c  EbIntraPrediction_AVX2.h  EbIntraPrediction_Intrinsic_AVX2.c  EbMemory_AVX2.h  EbPackUnPack_Intrinsic_AVX2.c  EbPictureOperators_AVX2.h  EbPictureOperators_Inline_AVX2.h  EbPictureOperators_Intrinsic_AVX2.c  aom_subpixel_8t_intrin_avx2.c  cdef_block_avx2.c  cfl_avx2.c  convolve_2d_avx2.c  convolve_avx2.c  convolve_avx2.h  highbd_convolve_2d_avx2.c  highbd_inv_txfm_avx2.c  highbd_jnt_convolve_avx2.c  jnt_convolve_2d_avx2.c  jnt_convolve_avx2.c  transpose_avx2.c  transpose_avx2.h  wiener_convolve_avx2.c
Source/Lib/Common/ASM_AVX512/: CMakeLists.txt  EbHighbdIntraPrediction_AVX512.c  EbPictureOperators_Intrinsic_AVX512.c  cdef_block_avx512.c  convolve_2d_avx512.c  convolve_avx512.c  convolve_avx512.h  highbd_inv_txfm_avx512.c  jnt_convolve_2d_avx512.c  jnt_convolve_avx512.c  wiener_convolve_avx512.c
Source/Lib/Common/ASM_SSE2/: CMakeLists.txt  EbAvcStyleMcp_Intrinsic_SSE2.c  EbAvcStyleMcp_SSE2.h  EbDeblockingFilter_Intrinsic_SSE2.c  EbDeblockingFilter_SSE2.h  EbHighbdIntraPrediction_SSE2.h  EbIntraPrediction_AV1_Intrinsic_SSE2.c  EbMcp_Intrinsic_SSE2.c  EbMcp_SSE2.h  EbPackUnPack_Intrinsic_SSE2.c  EbPictureOperators_Intrinsic_SSE2.c  EbPictureOperators_SSE2.asm  EbPictureOperators_SSE2.h  aom_subpixel_8t_sse2.asm  highbd_intrapred_sse2_.asm  highbd_subtract_sse2.c  intrapred_sse2.asm  subtract_sse2.asm  synonyms.h  x64Macro.asm  x64inc.asm
Source/Lib/Common/ASM_SSE4_1/: CMakeLists.txt  EbBlend_a64_mask_sse4.c  EbBlend_sse4.h  EbIntraPrediction16bit_Intrinsic_SSE4_1.c  EbMemory_SSE4_1.h  filterintra_sse4.c  highbd_inv_txfm_sse4.c  highbd_txfm_utility_sse4.h  highbd_warp_plane_sse4.c
Source/Lib/Common/ASM_SSSE3/: CMakeLists.txt  EbAvcStyleMcp_Intrinsic_SSSE3.c  EbAvcStyleMcp_SSSE3.h  EbHighbdIntraPrediction_Intrinsic_SSSE3.c  aom_subpixel_bilinear_ssse3.asm  av1_inv_txfm_ssse3.c
Source/Lib/Common/C_DEFAULT/: CMakeLists.txt  EbBlend_a64_mask_c.c  EbInterPrediction_c.c  EbIntraPrediction_c.c  EbPackUnPack_C.c  EbPackUnPack_C.h  EbPictureOperators_C.c  EbPictureOperators_C.h  cfl_c.c  filterintra_c.c
Source/Lib/Common/Codec/: Av1Common.h  CMakeLists.txt  ConfigureGitVersion.cmake  EbAv1Structs.h  EbAvcStyleMcp.c  EbAvcStyleMcp.h  EbBitstreamUnit.c  EbBitstreamUnit.h  EbBlend_a64_mask.c  EbBlockStructures.c  EbBlockStructures.h  EbCabacContextModel.c  EbCabacContextModel.h  EbCdef.c  EbCdef.h  EbCodingLoop.c  EbCoefficients.h  EbCommonUtils.h  EbDeblockingCommon.c  EbDeblockingCommon.h  EbDefinitions.h  EbInterPrediction.c  EbInterPrediction.h  EbIntraCommon.h  EbIntraPrediction.c  EbIntraPrediction.h  EbInvTransforms.c  EbInvTransforms.h  EbLog.c  EbLog.h  EbMalloc.c  EbMalloc.h  EbMcp.c  EbMcp.h  EbModeDecision.c  EbObject.h  EbPackUnPack.h  EbPictureBufferDesc.c  EbPictureBufferDesc.h  EbPictureOperators.c  (+28 more)
Source/Lib/Decoder/: CMakeLists.txt
Source/Lib/Decoder/Codec/: EbDecBitReader.h  EbDecBitstream.c  EbDecBitstream.h  EbDecBitstreamUnit.c  EbDecBitstreamUnit.h  EbDecBlock.h  EbDecCdef.c  EbDecCdef.h  EbDecHandle.c  EbDecHandle.h  EbDecInterPrediction.c  EbDecInterPrediction.h  EbDecIntraPrediction.c  EbDecIntraPrediction.h  EbDecInverseQuantize.c  EbDecInverseQuantize.h  EbDecLF.c  EbDecLF.h  EbDecMemInit.c  EbDecMemInit.h  EbDecNbr.c  EbDecNbr.h  EbDecObmc.c  EbDecParseBlock.c  EbDecParseFrame.c  EbDecParseFrame.h  EbDecParseHelper.c  EbDecParseHelper.h  EbDecParseInterBlock.c  EbDecParseInterBlock.h  EbDecParseObu.c  EbDecParseObuUtil.h  EbDecPicMgr.c  EbDecPicMgr.h  EbDecProcess.c  EbDecProcess.h  EbDecProcessBlock.c  EbDecProcessBlock.h  EbDecProcessFrame.c  EbDecProcessFrame.h  (+7 more)
Source/Lib/Encoder/ASM_AVX2/: CMakeLists.txt  EbCdef_AVX2.c  EbCombinedAveragingSAD_Inline_AVX2.h  EbCombinedAveragingSAD_Intrinsic_AVX2.c  EbCombinedAveragingSAD_Intrinsic_AVX2.h  EbComputeSAD_AVX2.h  EbComputeSAD_Intrinsic_AVX2.c  EbRestorationPick_AVX2.c  EbTemporalFiltering_AVX2.c  EbTemporalFiltering_AVX2.h  EbTransforms_Intrinsic_AVX2.c  highbd_fwd_txfm_avx2.c  highbd_variance_avx2.c  palette_avx2.c  pickrst_avx2.c  pickrst_avx2.h  variance_avx2.c
Source/Lib/Encoder/ASM_SSE2/: CMakeLists.txt  EbCombinedAveragingSAD_Intrinsic_SSE2.c  EbComputeMean_Intrinsic_SSE2.c  EbComputeMean_SSE2.h  EbComputeSAD_SSE2.h  EbMeSadCalculation_Intrinsic_SSE2.c  EbVariance_SSE2.h  fft_sse2.c  highbd_variance_impl_sse2.asm  highbd_variance_sse2.c  variance_sse2.c  x64RegisterUtil.asm
Source/Lib/Encoder/C_DEFAULT/: CMakeLists.txt  EbComputeSAD_C.c  EbComputeSAD_C.h  EbComputeVariance_C.c  EbComputeVariance_C.h  EncodeTxbRef_C.h  variance.c
Source/Lib/Encoder/Codec/: CMakeLists.txt  EbAdaptiveMotionVectorPrediction.c  EbAdaptiveMotionVectorPrediction.h  EbCdefProcess.c  EbCdefProcess.h  EbCodingLoop.c  EbCodingLoop.h  EbCodingUnit.c  EbCodingUnit.h  EbComputeMean.h  EbComputeSAD.h  EbDeblockingFilter.c  EbDeblockingFilter.h  EbDlfProcess.c  EbDlfProcess.h  EbEncCdef.c  EbEncCdef.h  EbEncDecProcess.c  EbEncDecProcess.h  EbEncDecResults.c  EbEncDecResults.h  EbEncDecSegments.c  EbEncDecSegments.h  EbEncDecTasks.c  EbEncDecTasks.h  EbEncInterPrediction.c  EbEncInterPrediction.h  EbEncIntraPrediction.c  EbEncIntraPrediction.h  EbEncWarpedMotion.c  EbEncWarpedMotion.h  EbEncodeContext.c  EbEncodeContext.h  EbEntropyCoding.c  EbEntropyCoding.h  EbEntropyCodingObject.h  EbEntropyCodingProcess.c  EbEntropyCodingProcess.h  EbEntropyCodingResults.c  EbEntropyCodingResults.h  (+131 more)
gstreamer-plugin/: gstsvtav1enc.c
test/: AVCStyleMcpTest.cc  FFTTest.cc  (+64 more)
(+72 files in other folders)
