#
# Copyright(c) 2019 Intel Corporation
# SPDX - License - Identifier: BSD - 2 - Clause - Patent
#

# C_DEFAULT Directory CMakeLists.txt

# Include Encoder Subdirectories
include_directories(../../../API
        ../../Encoder/Codec
        ${PROJECT_SOURCE_DIR}/Source/Lib/Encoder/C_DEFAULT/
        ${PROJECT_SOURCE_DIR}/Source/Lib/Encoder/ASM_SSE2/
        ${PROJECT_SOURCE_DIR}/Source/Lib/Encoder/ASM_SSSE3/
        ${PROJECT_SOURCE_DIR}/Source/Lib/Encoder/ASM_SSE4_1/
        ${PROJECT_SOURCE_DIR}/Source/Lib/Encoder/ASM_AVX2/
        ${PROJECT_SOURCE_DIR}/Source/Lib/Encoder/ASM_AVX512/
        ${PROJECT_SOURCE_DIR}/third_party/fastfeat/
        ${PROJECT_SOURCE_DIR}/Source/Lib/Encoder/Globals/
        )

set(all_files
    aom_dsp_rtcd.c
    aom_dsp_rtcd.h
    av1me.c
    av1me.h
    corner_detect.c
    corner_detect.h
    corner_match.c
    corner_match.h
    EbAdaptiveMotionVectorPrediction.c
    EbAdaptiveMotionVectorPrediction.h
    EbCdefProcess.c
    EbCdefProcess.h
    EbCodingLoop.c
    EbCodingLoop.h
    EbCodingUnit.c
    EbCodingUnit.h
    EbComputeMean.h
    EbComputeSAD.h
    EbDeblockingFilter.c
    EbDeblockingFilter.h
    EbDlfProcess.c
    EbDlfProcess.h
    EbEncCdef.c
    EbEncCdef.h
    EbEncDecProcess.c
    EbEncDecProcess.h
    EbEncDecResults.c
    EbEncDecResults.h
    EbEncDecSegments.c
    EbEncDecSegments.h
    EbEncDecTasks.c
    EbEncDecTasks.h
    EbEncInterPrediction.c
    EbEncInterPrediction.h
    EbEncIntraPrediction.c
    EbEncIntraPrediction.h
    EbEncodeContext.c
    EbEncodeContext.h
    EbEncWarpedMotion.c
    EbEncWarpedMotion.h
    EbEntropyCoding.c
    EbEntropyCoding.h
    EbEntropyCodingObject.h
    EbEntropyCodingProcess.c
    EbEntropyCodingProcess.h
    EbEntropyCodingResults.c
    EbEntropyCodingResults.h
    EbEntropyCodingUtil.h
    EbFullLoop.c
    EbFullLoop.h
    EbGlobalMotionEstimation.c
    EbGlobalMotionEstimation.h
    EbGlobalMotionEstimationCost.c
    EbGlobalMotionEstimationCost.h
    EbInitialRateControlProcess.c
    EbInitialRateControlProcess.h
    EbInitialRateControlReorderQueue.c
    EbInitialRateControlReorderQueue.h
    EbInitialRateControlResults.c
    EbInitialRateControlResults.h
    EbLambdaRateTables.h
    EbMdRateEstimation.c
    EbMdRateEstimation.h
    EbMeSadCalculation.c
    EbMeSadCalculation.h
    EbModeDecision.c
    EbModeDecision.h
    EbModeDecisionConfiguration.h
    EbModeDecisionConfigurationProcess.c
    EbModeDecisionConfigurationProcess.h
    EbModeDecisionProcess.c
    EbModeDecisionProcess.h
    EbModeDecisionSegments.h
    EbMotionEstimation.c
    EbMotionEstimation.h
    EbMotionEstimationContext.c
    EbMotionEstimationContext.h
    EbMotionEstimationLcuResults.h
    EbMotionEstimationProcess.c
    EbMotionEstimationProcess.h
    EbMotionEstimationResults.c
    EbMotionEstimationResults.h
    EbMotionVectorUnit.h
    EbMvMerge.h
    EbNeighborArrays.c
    EbNeighborArrays.h
    EbPacketizationProcess.c
    EbPacketizationProcess.h
    EbPacketizationReorderQueue.c
    EbPacketizationReorderQueue.h
    EbPictureAnalysisProcess.c
    EbPictureAnalysisProcess.h
    EbPictureAnalysisResults.c
    EbPictureAnalysisResults.h
    EbPictureControlSet.c
    EbPictureControlSet.h
    EbPictureDecisionProcess.c
    EbPictureDecisionProcess.h
    EbPictureDecisionQueue.c
    EbPictureDecisionQueue.h
    EbPictureDecisionReorderQueue.c
    EbPictureDecisionReorderQueue.h
    EbPictureDecisionResults.c
    EbPictureDecisionResults.h
    EbPictureDemuxResults.c
    EbPictureDemuxResults.h
    EbPictureManagerProcess.c
    EbPictureManagerProcess.h
    EbPictureManagerQueue.c
    EbPictureManagerQueue.h
    EbPictureManagerReorderQueue.c
    EbPictureManagerReorderQueue.h
    EbPredictionStructure.c
    EbPredictionStructure.h
    EbPredictionUnit.h
    EbProductCodingLoop.c
    EbPsnr.c
    EbPsnr.h
    EbRateControlProcess.c
    EbRateControlProcess.h
    EbRateControlResults.c
    EbRateControlResults.h
    EbRateControlTables.c
    EbRateControlTables.h
    EbRateControlTasks.c
    EbRateControlTasks.h
    EbRateDistortionCost.c
    EbRateDistortionCost.h
    EbReferenceObject.c
    EbReferenceObject.h
    EbResize.c
    EbResize.h
    EbResourceCoordinationProcess.c
    EbResourceCoordinationProcess.h
    EbResourceCoordinationResults.c
    EbResourceCoordinationResults.h
    EbRestorationPick.c
    EbRestorationPick.h
    EbRestProcess.c
    EbRestProcess.h
    EbSegmentation.c
    EbSegmentation.h
    EbSequenceControlSet.c
    EbSequenceControlSet.h
    EbSourceBasedOperationsProcess.c
    EbSourceBasedOperationsProcess.h
    EbString.c
    EbString.h
    EbTemporalFiltering.c
    EbTemporalFiltering.h
    EbTransforms.c
    EbTransforms.h
    EbTransformUnit.h
    EbTransQuantBuffers.c
    EbTransQuantBuffers.h
    fft.c
    fft_common.h
    global_motion.c
    global_motion.h
    hash.c
    hash.h
    hash_motion.c
    hash_motion.h
    k_means_template.h
    mathutils.h
    noise_model.c
    noise_model.h
    noise_util.c
    noise_util.h
    palette.c
    random.h
    ransac.c
    ransac.h
    vector.c
    vector.h
    )

add_library(ENCODER_CODEC OBJECT ${all_files})



